--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>전입학예정확인서</title>
   <script>
-    // === 1) 샤드 리스트 (기존 코드) ===
+    // (1) 샤드 URL 목록
     const shards = [
       "https://confirmationofprospectiveschooltransfer.streamlit.app",
       "https://confirmationofprospectiveschooltransfer2.streamlit.app",
@@ -20,11 +20,10 @@
       "https://confirmationofprospectiveschooltransfer10.streamlit.app"
     ];
 
-    // === 2) 지연시간 테스트 함수 (기존 코드) ===
+    // (2) 각 샤드 지연 시간 측정
     async function testLatency(url) {
       const start = performance.now();
       try {
-        // 가벼운 요청으로 지연 시간 측정
         await fetch(url + "/", { mode: "no-cors" });
         return performance.now() - start;
       } catch {
@@ -32,6 +31,7 @@
       }
     }
 
+    // (3) 병렬로 모두 측정 후 최저 지연 샤드를 선택
     async function chooseBestShard() {
       const results = await Promise.all(
         shards.map(async (url) => {
@@ -43,35 +43,31 @@
       return results[0].url;
     }
 
-    // === 3) 이모티콘 순환용 배열 및 로직 추가 ===
-    // 바꿔 보여줄 이모티콘 목록 (원하는 이모지로 자유롭게 수정하세요)
-    const emojis = [
-      "🚀", "🔄", "⌛", "🌐", "📄", "⭐", "🔧", "💡", "📶", "⏳"
-    ];
-    let emojiIdx = 0;  // 현재 표시 중인 이모티콘 인덱스
-
-    // 이모티콘 순환 함수를 설정
-    function startEmojiRotation() {
-      const msgDiv = document.querySelector(".message");
-      // 맨 처음 로드 시에도 즉시 이모티콘 표시
-      msgDiv.textContent = emojis[emojiIdx];
-
-      // 500ms(0.5초)마다 다음 이모티콘으로 교체
-      setInterval(() => {
-        emojiIdx = (emojiIdx + 1) % emojis.length;
-        msgDiv.textContent = emojis[emojiIdx];
-      }, 500);
-    }
-
     window.addEventListener("DOMContentLoaded", async () => {
-      // 1) 먼저 이모티콘 순환 시작
+      // (4) 이모티콘 순환 시작
       startEmojiRotation();
 
-      // 2) 최적 샤드 선택 후 리디렉션
+      // (5) 최적 샤드로 리디렉션
       const targetUrl = await chooseBestShard();
-      console.log("지연시간 기반 선택 샤드:", targetUrl);
+      console.log("선택된 최적 샤드:", targetUrl);
       window.location.replace(targetUrl);
     });
+
+    // ────────────────────────────────────────────────
+    // (6) 이모티콘 순환 로직
+    const emojis = ["🐀", "🐂", "🐅", "🐇", "🐉", "🐍", "🐎", "🐑", "🐒", "🐔", "🐕", "🐖"];
+    let emojiIndex = 0;
+    function startEmojiRotation() {
+      const emojiDiv = document.getElementById("emoji");
+      // 즉시 첫 이모티콘 표시
+      emojiDiv.textContent = emojis[emojiIndex];
+      // 0.6초(600ms)마다 이모티콘 변경
+      setInterval(() => {
+        emojiIndex = (emojiIndex + 1) % emojis.length;
+        emojiDiv.textContent = emojis[emojiIndex];
+      }, 600);
+    }
+    // ────────────────────────────────────────────────
   </script>
   <style>
     body {
@@ -85,15 +81,33 @@
       text-align: center;
       background-color: #f5f5f5;
     }
-    .message {
-      font-size: 3rem; /* 이모티콘이 큼직하게 보이도록 크기 조정 */
+    .container {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+    .message-text {
+      font-size: 1.2rem;
       color: #333;
+      margin-bottom: 1rem;
+    }
+    .emoji {
+      font-size: 2.5rem;
+      height: 3rem; /* 미리 공간 확보 */
+      line-height: 3rem;
     }
   </style>
 </head>
 <body>
-  <!-- 원래는 "잠시만 기다려 주세요... 서버 연결 중입니다."였던 부분을
-       이모티콘을 보여주는 <div>로 대체했습니다. -->
-  <div class="message"></div>
+  <div class="container">
+    <!-- (7) 고정 문구 -->
+    <div class="message-text">
+      잠시만 기다려 주세요.<br />
+      서버 연결 중입니다.
+    </div>
+    <!-- (8) 이모티콘만 순환해서 표시 -->
+    <div id="emoji" class="emoji"></div>
+  </div>
 </body>
 </html>
