--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     ];
 
     // (6) 이모티콘 순환 로직
-    const emojis = ["🐀", "🐂", "🐅", "🐇", "🐉", "🐍", "🐎", "🐑", "🐒", "🐔", "🐕", "🐖"];
+    const emojis = ["⏳", "⌛"];
     let emojiIndex = 0;
     function startEmojiRotation() {
       const emojiDiv = document.getElementById("emoji");
