--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
   <div class="container">
     <!-- (7) 고정 문구 -->
     <div class="message-text">
-      잠시만 기다려 주세요.<br />
-      접속 중입니다.
+      접속 중입니다.<br />
+      잠시만 기다려 주세요.
     </div>
     <!-- (8) 이모티콘만 순환해서 표시 -->
     <div id="emoji" class="emoji"></div>
