--- a/index.html
+++ b/index.html
@@ -5,9 +5,264 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>전입학예정확인서 조사</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;600&family=Rubik:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Tailwind CSS CDN을 로드합니다. -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Google Fonts (Inter, Noto Sans KR)를 로드합니다. -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Noto+Sans+KR:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    /* 사용자 정의 CSS 변수를 정의합니다. */
+    :root {
+      --primary-color: #EF4444; /* Red 500 */
+      --secondary-color: #3B82F6; /* Blue 500 */
+      --accent-color-1: #10B981; /* Emerald 500 */
+      --accent-color-2: #F59E0B; /* Amber 500 */
+      --dark-text-color: #1F2937; /* Gray 800 */
+      --light-text-color: #F9FAFB; /* Gray 50 */
+      --bg-gradient-start: #E0F2F7; /* Light Blue */
+      --bg-gradient-end: #F0F9FF;   /* Even Lighter Blue */
+    }
+
+    /* 모든 요소에 box-sizing: border-box를 적용합니다. */
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+
+    /* 바디 스타일: 전체 화면을 채우고, 폰트를 설정하며, 그라디언트 배경을 적용합니다. */
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      font-family: 'Inter', 'Noto Sans KR', sans-serif;
+      text-align: center;
+      background: linear-gradient(135deg, var(--bg-gradient-start) 0%, var(--bg-gradient-end) 100%);
+      color: var(--dark-text-color);
+      position: relative;
+      overflow: hidden; /* 오버플로우를 숨겨줍니다. */
+    }
+
+    /* 추상적인 배경 도형들의 컨테이너입니다. */
+    .abstract-shapes {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none; /* 클릭 이벤트를 무시합니다. */
+      overflow: hidden; /* 도형이 튀어나오지 않도록 숨깁니다. */
+    }
+
+    /* 각 도형의 기본 스타일입니다. */
+    .shape {
+      position: absolute;
+      opacity: 0.6; /* 투명도를 설정합니다. */
+      animation: float-and-rotate 15s ease-in-out infinite alternate; /* 부유 및 회전 애니메이션 */
+      filter: blur(5px); /* 블러 효과를 적용합니다. */
+    }
+
+    /* 피카소에서 영감을 받은 불규칙한 원 형태 */
+    .shape.picasso-circle {
+      width: 150px;
+      height: 150px;
+      background: var(--primary-color);
+      border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%; /* 불규칙한 원 모양 */
+      top: 10%;
+      left: 10%;
+      animation-delay: 0s;
+    }
+
+    /* 각진 추상 도형 */
+    .shape.abstract-square {
+      width: 180px;
+      height: 180px;
+      background: var(--secondary-color);
+      transform: rotate(25deg) skew(-15deg); /* 회전 및 기울기 효과 */
+      top: 60%;
+      left: 75%;
+      animation-delay: 3s;
+    }
+
+    /* 미래 지향적인 삼각형 */
+    .shape.futuristic-triangle {
+      width: 0;
+      height: 0;
+      border-left: 100px solid transparent;
+      border-right: 100px solid transparent;
+      border-bottom: 170px solid var(--accent-color-1);
+      transform: rotate(180deg) scaleY(0.8); /* 역삼각형 및 압축 효과 */
+      top: 70%;
+      left: 20%;
+      animation-delay: 6s;
+    }
+
+    /* 유기적인 타원 형태 */
+    .shape.organic-blob {
+      width: 200px;
+      height: 100px;
+      background: var(--accent-color-2);
+      border-radius: 30% 70% 50% 50% / 50% 50% 70% 30%; /* 유기적인 블롭 형태 */
+      top: 20%;
+      left: 65%;
+      animation-delay: 9s;
+    }
+
+    /* 메인 컨테이너 스타일 */
+    .main-container {
+      background: rgba(255, 255, 255, 0.9); /* 반투명 흰색 배경 */
+      backdrop-filter: blur(10px); /* 배경 블러 효과 */
+      -webkit-backdrop-filter: blur(10px); /* Safari 지원 */
+      padding: 3rem;
+      border-radius: 2rem; /* 훨씬 더 둥근 모서리 */
+      max-width: 480px;
+      width: 90%;
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15); /* 부드러운 그림자 */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      z-index: 10; /* 도형 위에 표시되도록 z-index를 높입니다. */
+      border: 1px solid rgba(255, 255, 255, 0.3); /* 약간의 테두리 */
+      animation: appear 1s ease-out forwards; /* 나타나는 애니메이션 */
+    }
+
+    /* 메시지 텍스트 스타일 */
+    .message-text {
+      font-size: 1.8rem; /* 더 큰 폰트 크기 */
+      font-weight: 700; /* 더 굵은 글씨 */
+      color: var(--dark-text-color);
+      margin-bottom: 2rem;
+      line-height: 1.3;
+      letter-spacing: -0.025em; /* 자간 조절 */
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.05); /* 텍스트 그림자 */
+    }
+
+    /* 스피너 스타일 */
+    .spinner {
+      width: 60px; /* 더 큰 스피너 */
+      height: 60px;
+      border: 6px solid rgba(255, 255, 255, 0.5); /* 밝은 테두리 */
+      border-top: 6px solid var(--primary-color); /* 상단 테두리 색상 */
+      border-radius: 50%;
+      animation: spin 1.2s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite; /* 바운스 효과가 있는 애니메이션 */
+      box-shadow: 0 0 15px rgba(239, 68, 68, 0.4); /* 스피너 그림자 */
+    }
+
+    /* 애니메이션 정의 */
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    @keyframes float-and-rotate {
+      0% {
+        transform: translate(0, 0) rotate(0deg);
+        opacity: 0.6;
+      }
+      25% {
+        transform: translate(10px, -20px) rotate(15deg);
+        opacity: 0.7;
+      }
+      50% {
+        transform: translate(-15px, 10px) rotate(30deg);
+        opacity: 0.8;
+      }
+      75% {
+        transform: translate(20px, -10px) rotate(45deg);
+        opacity: 0.7;
+      }
+      100% {
+        transform: translate(0, 0) rotate(60deg);
+        opacity: 0.6;
+      }
+    }
+
+    @keyframes appear {
+      from {
+        opacity: 0;
+        transform: translateY(20px) scale(0.95);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+      }
+    }
+
+    /* 반응형 디자인을 위한 미디어 쿼리 */
+    @media (max-width: 768px) {
+      .main-container {
+        padding: 2.5rem;
+        border-radius: 1.5rem;
+        max-width: 95%;
+      }
+      .message-text {
+        font-size: 1.6rem;
+      }
+      .spinner {
+        width: 50px;
+        height: 50px;
+        border-width: 5px;
+      }
+      .shape {
+        filter: blur(3px); /* 모바일에서 블러 감소 */
+      }
+      .shape.picasso-circle,
+      .shape.abstract-square,
+      .shape.futuristic-triangle,
+      .shape.organic-blob {
+        width: 120px;
+        height: 120px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .main-container {
+        padding: 2rem;
+        border-radius: 1rem;
+      }
+      .message-text {
+        font-size: 1.4rem;
+        margin-bottom: 1.5rem;
+      }
+      .spinner {
+        width: 40px;
+        height: 40px;
+        border-width: 4px;
+      }
+      /* 모바일에서 도형 크기 더 줄이기 */
+      .shape.picasso-circle,
+      .shape.abstract-square,
+      .shape.futuristic-triangle,
+      .shape.organic-blob {
+        width: 80px;
+        height: 80px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <!-- 추상적인 배경 도형들입니다. -->
+  <div class="abstract-shapes">
+    <div class="shape picasso-circle"></div>
+    <div class="shape abstract-square"></div>
+    <div class="shape futuristic-triangle"></div>
+    <div class="shape organic-blob"></div>
+  </div>
+
+  <!-- 메인 컨테이너입니다. -->
+  <div class="main-container">
+    <!-- 대기 메시지 텍스트입니다. -->
+    <div class="message-text">
+      잠시만 기다려 주세요. <br> 다른 페이지로 이동 중입니다.
+    </div>
+    <!-- 로딩 스피너입니다. -->
+    <div class="spinner"></div>
+  </div>
+
   <script>
-    // 샤드 URL 목록
+    // 샤드(shard) URL 목록입니다.
     const shards = [
       "https://confirmationofprospectiveschooltransfer.streamlit.app",
       "https://confirmationofprospectiveschooltransfer2.streamlit.app",
@@ -25,116 +280,19 @@
       "https://confirmationofprospectiveschooltransfer14.streamlit.app",
       "https://confirmationofprospectiveschooltransfer15.streamlit.app"
     ];
+
+    // DOMContentLoaded 이벤트가 발생하면 실행될 함수입니다.
     window.addEventListener("DOMContentLoaded", () => {
+      // 샤드 목록에서 무작위 인덱스를 선택합니다.
       const randomIdx = Math.floor(Math.random() * shards.length);
+      // 선택된 샤드 URL을 가져옵니다.
       const targetUrl = shards[randomIdx];
-      setTimeout(() => window.location.replace(targetUrl), 500);
+      console.log("무작위 선택 샤드:", targetUrl); // 콘솔에 선택된 샤드 URL을 출력합니다.
+
+      // 1초(1000ms) 지연 후 선택된 URL로 리디렉션합니다.
+      // 이 지연은 애니메이션이 재생될 시간을 제공합니다.
+      setTimeout(() => window.location.replace(targetUrl), 1000);
     });
   </script>
-  <style>
-    /* --- 기본 레이아웃 유지 --- */
-    body {
-      margin: 0; padding: 0;
-      display: flex;
-      justify-content: center; align-items: center;
-      min-height: 100vh;
-      font-family: 'Rubik', 'Noto Sans KR', sans-serif;
-      background: #ffffff; color: #2d3748;
-      overflow: hidden; position: relative;
-    }
-    .container {
-      background: #ffffff; padding: 2rem;
-      border: 1px solid #e2e8f0; max-width: 360px; width: 90%;
-      box-sizing: border-box;
-      display: flex; flex-direction: column;
-      align-items: center; justify-content: center;
-      z-index: 1; position: relative;
-    }
-    .message-text {
-      font-size: 1.3rem; font-weight: 600;
-      margin-bottom: 1.5rem; line-height: 1.4;
-    }
-
-    /* --- 애플 스타일 스피너 --- */
-    .spinner {
-      position: relative;
-      width: 40px; height: 40px;
-    }
-    .spinner div {
-      box-sizing: border-box;
-      position: absolute;
-      width: 100%; height: 100%;
-      border: 4px solid transparent;
-      border-top-color: #1d345c;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-    }
-    /* 여러 개의 레이어를 겹쳐서 부드러운 원형 지속 회전 효과 */
-    .spinner div:nth-child(1) { animation-duration: 1s; }
-    .spinner div:nth-child(2) { transform: scale(0.8); animation-duration: 1.2s; }
-    .spinner div:nth-child(3) { transform: scale(0.6); animation-duration: 1.4s; }
-
-    @keyframes spin {
-      0%   { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    /* --- 배경 기호 컨테이너 --- */
-    .shapes {
-      position: absolute; top: 0; left: 0;
-      width: 100%; height: 100%;
-      pointer-events: none;
-    }
-    .shape {
-      position: absolute;
-      opacity: 0.75;
-      animation: drift infinite ease-in-out;
-    }
-
-    /* 기호별 기본 크기/색상/위치 */
-    .shape.circle     { width: 60px; height: 60px; background: #e63946; border-radius: 50%; top: 10%; left: 15%; animation-duration: 14s; }
-    .shape.square     { width: 80px; height: 80px; background: #457b9d; top: 60%; left: 75%; transform: rotate(45deg); animation-duration: 17s; }
-    .shape.triangle   { width: 0; height: 0; border-left: 40px solid transparent; border-right: 40px solid transparent; border-bottom: 70px solid #f4a261; top: 70%; left: 20%; animation-duration: 19s; }
-    .shape.ellipse    { width: 100px; height: 50px; background: #e9c46a; border-radius: 50%; top: 20%; left: 70%; transform: rotate(-30deg); animation-duration: 16s; }
-    .shape.pentagon   { width: 0; height: 0; border-style: solid; border-width: 0 35px 50px 35px; border-color: transparent transparent #2a9d8f transparent; top: 35%; left: 40%; animation-duration: 18s; }
-    .shape.hexagon    { width: 80px; height: 46px; background: #8ac926; clip-path: polygon(25% 0%,75% 0%,100% 50%,75%100%,25%100%,0%50%); top: 50%; left: 25%; animation-duration: 20s; }
-
-    /* 부드러운 우주 떠다니기 모션 */
-    @keyframes drift {
-      0%   { transform: translate(0,0) rotate(0deg); }
-      25%  { transform: translate(10px,-15px) rotate(5deg); }
-      50%  { transform: translate(0,-25px) rotate(10deg); }
-      75%  { transform: translate(-10px,-15px) rotate(5deg); }
-      100% { transform: translate(0,0) rotate(0deg); }
-    }
-
-    /* --- 모바일 대응 --- */
-    @media (max-width: 480px) {
-      .container { padding: 1.5rem; }
-      .message-text { font-size: 1.1rem; }
-      .spinner { width: 32px; height: 32px; }
-      .spinner div { border-width: 3px; }
-      .shape { opacity: 0.6; animation-duration: calc(var(--duration) * 0.7); }
-    }
-  </style>
-</head>
-<body>
-  <!-- 배경 기호들: 원·네모·세모·타원·오각형·육각형 -->
-  <div class="shapes">
-    <div class="shape circle"></div>
-    <div class="shape square"></div>
-    <div class="shape triangle"></div>
-    <div class="shape ellipse"></div>
-    <div class="shape pentagon"></div>
-    <div class="shape hexagon"></div>
-  </div>
-
-  <!-- 메시지 + 스피너 -->
-  <div class="container">
-    <div class="message-text">잠시만 기다려 주세요.</div>
-    <div class="spinner">
-      <div></div><div></div><div></div>
-    </div>
-  </div>
 </body>
 </html>
