--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
   <style>
     /* 사용자 정의 CSS 변수를 정의합니다. */
     :root {
-      --primary-color: #EF4444; /* Red 500 */
-      --secondary-color: #3B82F6; /* Blue 500 */
-      --accent-color-1: #10B981; /* Emerald 500 */
-      --accent-color-2: #F59E0B; /* Amber 500 */
+      /* 무지개 색상 계열의 다채로운 도형 색상 */
+      --shape-color-1: #FF6B6B; /* Vibrant Red */
+      --shape-color-2: #FFAD61; /* Bright Orange */
+      --shape-color-3: #FFD166; /* Sunny Yellow */
+      --shape-color-4: #6BFFB3; /* Mint Green */
+      --shape-color-5: #6B95FF; /* Sky Blue */
+      --shape-color-6: #B36BFF; /* Lavender/Violet */
+      --shape-color-7: #FF6BB3; /* Hot Pink */
+      --shape-color-8: #6BEBFF; /* Cyan */
+      --shape-color-9: #B3FF6B; /* Lime Green */
+      --shape-color-10: #FFB36B; /* Peach */
+      --shape-color-11: #6B6BFF; /* Deep Blue */
+      --shape-color-12: #FF6BFF; /* Magenta */
+
       --dark-text-color: #1F2937; /* Gray 800 */
       --light-text-color: #F9FAFB; /* Gray 50 */
       --bg-gradient-start: #E0F2F7; /* Light Blue */
@@ -57,56 +67,62 @@
     /* 각 도형의 기본 스타일입니다. */
     .shape {
       position: absolute;
-      opacity: 0.6; /* 투명도를 설정합니다. */
-      animation: float-and-rotate 15s ease-in-out infinite alternate; /* 부유 및 회전 애니메이션 */
-      filter: blur(5px); /* 블러 효과를 적용합니다. */
+      opacity: 0.5; /* 투명도를 설정합니다. */
+      animation: float-and-rotate 25s ease-in-out infinite alternate; /* 부유 및 회전 애니메이션 시간을 늘려 더 부드럽게 */
+      filter: blur(3px); /* 블러 효과를 적용합니다. */
+      will-change: transform, opacity; /* 애니메이션 성능 최적화 */
     }
 
-    /* 피카소에서 영감을 받은 불규칙한 원 형태 */
-    .shape.picasso-circle {
-      width: 150px;
-      height: 150px;
-      background: var(--primary-color);
-      border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%; /* 불규칙한 원 모양 */
-      top: 10%;
-      left: 10%;
-      animation-delay: 0s;
+    /* 다양한 기본 도형들 및 고른 분포를 위한 위치 설정 */
+    .shape.rect-1 {
+      width: 140px; height: 80px; background: var(--shape-color-1);
+      top: 10%; left: 10%; transform: rotate(15deg); animation-delay: 0s;
+    }
+    .shape.circle-1 {
+      width: 90px; height: 90px; background: var(--shape-color-2); border-radius: 50%;
+      top: 60%; left: 85%; transform: rotate(-30deg); animation-delay: 2s;
+    }
+    .shape.triangle-up-1 {
+      width: 0; height: 0; border-left: 70px solid transparent; border-right: 70px solid transparent; border-bottom: 120px solid var(--shape-color-3);
+      top: 20%; left: 75%; transform: rotate(45deg); animation-delay: 4s;
+    }
+    .shape.rhombus-1 {
+      width: 120px; height: 120px; background: var(--shape-color-4); transform: rotate(45deg);
+      top: 45%; left: 15%; animation-delay: 6s;
+    }
+    .shape.oval-1 {
+      width: 100px; height: 150px; background: var(--shape-color-5); border-radius: 50%;
+      top: 5%; left: 50%; transform: rotate(70deg); animation-delay: 8s;
+    }
+    .shape.triangle-down-1 {
+      width: 0; height: 0; border-left: 80px solid transparent; border-right: 80px solid transparent; border-top: 130px solid var(--shape-color-6);
+      top: 70%; left: 40%; transform: rotate(-20deg); animation-delay: 10s;
+    }
+    .shape.square-1 {
+      width: 110px; height: 110px; background: var(--shape-color-7);
+      top: 30%; left: 30%; transform: rotate(0deg); animation-delay: 12s;
+    }
+    .shape.rect-2 {
+      width: 160px; height: 60px; background: var(--shape-color-8);
+      top: 80%; left: 5%; transform: rotate(-10deg); animation-delay: 14s;
+    }
+    .shape.circle-2 {
+      width: 70px; height: 70px; background: var(--shape-color-9); border-radius: 50%;
+      top: 15%; left: 85%; animation-delay: 16s;
+    }
+    .shape.oval-2 {
+      width: 130px; height: 80px; background: var(--shape-color-10); border-radius: 50%;
+      top: 50%; left: 70%; transform: rotate(25deg); animation-delay: 18s;
+    }
+    .shape.rhombus-2 {
+      width: 90px; height: 90px; background: var(--shape-color-11); transform: rotate(10deg);
+      top: 85%; left: 60%; animation-delay: 20s;
+    }
+    .shape.triangle-up-2 {
+      width: 0; height: 0; border-left: 50px solid transparent; border-right: 50px solid transparent; border-bottom: 90px solid var(--shape-color-12);
+      top: 5%; left: 25%; transform: rotate(90deg); animation-delay: 22s;
     }
 
-    /* 각진 추상 도형 */
-    .shape.abstract-square {
-      width: 180px;
-      height: 180px;
-      background: var(--secondary-color);
-      transform: rotate(25deg) skew(-15deg); /* 회전 및 기울기 효과 */
-      top: 60%;
-      left: 75%;
-      animation-delay: 3s;
-    }
-
-    /* 미래 지향적인 삼각형 */
-    .shape.futuristic-triangle {
-      width: 0;
-      height: 0;
-      border-left: 100px solid transparent;
-      border-right: 100px solid transparent;
-      border-bottom: 170px solid var(--accent-color-1);
-      transform: rotate(180deg) scaleY(0.8); /* 역삼각형 및 압축 효과 */
-      top: 70%;
-      left: 20%;
-      animation-delay: 6s;
-    }
-
-    /* 유기적인 타원 형태 */
-    .shape.organic-blob {
-      width: 200px;
-      height: 100px;
-      background: var(--accent-color-2);
-      border-radius: 30% 70% 50% 50% / 50% 50% 70% 30%; /* 유기적인 블롭 형태 */
-      top: 20%;
-      left: 65%;
-      animation-delay: 9s;
-    }
 
     /* 메인 컨테이너 스타일 */
     .main-container {
@@ -144,10 +160,10 @@
       width: 60px; /* 더 큰 스피너 */
       height: 60px;
       border: 6px solid rgba(255, 255, 255, 0.5); /* 밝은 테두리 */
-      border-top: 6px solid var(--primary-color); /* 상단 테두리 색상 */
+      border-top: 6px solid var(--shape-color-1); /* 상단 테두리 색상 */
       border-radius: 50%;
       animation: spin 1.2s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite; /* 바운스 효과가 있는 애니메이션 */
-      box-shadow: 0 0 15px rgba(239, 68, 68, 0.4); /* 스피너 그림자 */
+      box-shadow: 0 0 15px rgba(255, 107, 107, 0.4); /* 스피너 그림자 */
     }
 
     /* 애니메이션 정의 */
@@ -159,23 +175,23 @@
     @keyframes float-and-rotate {
       0% {
         transform: translate(0, 0) rotate(0deg);
-        opacity: 0.6;
+        opacity: 0.5;
       }
       25% {
         transform: translate(10px, -20px) rotate(15deg);
-        opacity: 0.7;
+        opacity: 0.6;
       }
       50% {
         transform: translate(-15px, 10px) rotate(30deg);
-        opacity: 0.8;
+        opacity: 0.7;
       }
       75% {
         transform: translate(20px, -10px) rotate(45deg);
-        opacity: 0.7;
+        opacity: 0.6;
       }
       100% {
         transform: translate(0, 0) rotate(60deg);
-        opacity: 0.6;
+        opacity: 0.5;
       }
     }
 
@@ -206,14 +222,32 @@
         border-width: 5px;
       }
       .shape {
-        filter: blur(3px); /* 모바일에서 블러 감소 */
+        filter: blur(2px); /* 모바일에서 블러 감소 */
       }
-      .shape.picasso-circle,
-      .shape.abstract-square,
-      .shape.futuristic-triangle,
-      .shape.organic-blob {
-        width: 120px;
-        height: 120px;
+      /* 모바일에서 도형 크기 조절 */
+      .shape.rect-1, .shape.circle-1, .shape.triangle-up-1, .shape.rhombus-1,
+      .shape.oval-1, .shape.triangle-down-1, .shape.square-1, .shape.rect-2,
+      .shape.circle-2, .shape.oval-2, .shape.rhombus-2, .shape.triangle-up-2 {
+        width: 70px; /* 도형 크기 감소 */
+        height: auto;
+      }
+      .shape.circle-1, .shape.circle-2 {
+        height: 70px; /* 원의 높이 유지 */
+      }
+      .shape.rect-1, .shape.rect-2 {
+        height: 50px; /* 사각형의 높이 감소 */
+      }
+      .shape.rhombus-1, .shape.rhombus-2, .shape.square-1 {
+        height: 70px; /* 마름모/사각형 높이 감소 */
+      }
+      .shape.oval-1, .shape.oval-2 {
+        height: 100px; /* 타원 높이 감소 */
+      }
+      .shape.triangle-up-1, .shape.triangle-down-1, .shape.triangle-up-2 {
+        border-left-width: 40px;
+        border-right-width: 40px;
+        border-bottom-width: 70px; /* 삼각형 높이 감소 */
+        border-top-width: 70px; /* 삼각형 높이 감소 */
       }
     }
 
@@ -231,13 +265,30 @@
         height: 40px;
         border-width: 4px;
       }
-      /* 모바일에서 도형 크기 더 줄이기 */
-      .shape.picasso-circle,
-      .shape.abstract-square,
-      .shape.futuristic-triangle,
-      .shape.organic-blob {
-        width: 80px;
-        height: 80px;
+      /* 더 작은 모바일 화면에서 도형 크기 조절 */
+      .shape.rect-1, .shape.circle-1, .shape.triangle-up-1, .shape.rhombus-1,
+      .shape.oval-1, .shape.triangle-down-1, .shape.square-1, .shape.rect-2,
+      .shape.circle-2, .shape.oval-2, .shape.rhombus-2, .shape.triangle-up-2 {
+        width: 50px; /* 도형 크기 추가 감소 */
+        height: auto;
+      }
+      .shape.circle-1, .shape.circle-2 {
+        height: 50px; /* 원의 높이 유지 */
+      }
+      .shape.rect-1, .shape.rect-2 {
+        height: 30px; /* 사각형의 높이 추가 감소 */
+      }
+      .shape.rhombus-1, .shape.rhombus-2, .shape.square-1 {
+        height: 50px; /* 마름모/사각형 높이 추가 감소 */
+      }
+      .shape.oval-1, .shape.oval-2 {
+        height: 70px; /* 타원 높이 추가 감소 */
+      }
+      .shape.triangle-up-1, .shape.triangle-down-1, .shape.triangle-up-2 {
+        border-left-width: 30px;
+        border-right-width: 30px;
+        border-bottom-width: 50px; /* 삼각형 높이 추가 감소 */
+        border-top-width: 50px; /* 삼각형 높이 추가 감소 */
       }
     }
   </style>
@@ -245,10 +296,18 @@
 <body>
   <!-- 추상적인 배경 도형들입니다. -->
   <div class="abstract-shapes">
-    <div class="shape picasso-circle"></div>
-    <div class="shape abstract-square"></div>
-    <div class="shape futuristic-triangle"></div>
-    <div class="shape organic-blob"></div>
+    <div class="shape rect-1"></div>
+    <div class="shape circle-1"></div>
+    <div class="shape triangle-up-1"></div>
+    <div class="shape rhombus-1"></div>
+    <div class="shape oval-1"></div>
+    <div class="shape triangle-down-1"></div>
+    <div class="shape square-1"></div>
+    <div class="shape rect-2"></div>
+    <div class="shape circle-2"></div>
+    <div class="shape oval-2"></div>
+    <div class="shape rhombus-2"></div>
+    <div class="shape triangle-up-2"></div>
   </div>
 
   <!-- 메인 컨테이너입니다. -->
@@ -289,9 +348,9 @@
       const targetUrl = shards[randomIdx];
       console.log("무작위 선택 샤드:", targetUrl); // 콘솔에 선택된 샤드 URL을 출력합니다.
 
-      // 1초(1000ms) 지연 후 선택된 URL로 리디렉션합니다.
+      // 1.5초(1500ms) 지연 후 선택된 URL로 리디렉션합니다.
       // 이 지연은 애니메이션이 재생될 시간을 제공합니다.
-      setTimeout(() => window.location.replace(targetUrl), 1000);
+      setTimeout(() => window.location.replace(targetUrl), 1500);
     });
   </script>
 </body>
