--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
   <div class="main-container">
     <!-- 대기 메시지 텍스트입니다. -->
     <div class="message-text">
-      잠시만 기다려 주세요. <br> 다른 페이지로 이동 중입니다.
+      잠시만 기다려 주세요.
     </div>
     <!-- 로딩 스피너입니다. -->
     <div class="spinner"></div>
