--- a/index.html
+++ b/index.html
@@ -74,53 +74,54 @@
     }
 
     /* 다양한 기본 도형들 및 고른 분포를 위한 위치 설정 */
+    /* 도형의 종류를 다양화하고, 서로 겹치지 않도록 고루 배치합니다. */
     .shape.rect-1 {
       width: 140px; height: 80px; background: var(--shape-color-1);
-      top: 10%; left: 10%; transform: rotate(15deg); animation-delay: 0s;
+      top: 15%; left: 80%; transform: rotate(15deg); animation-delay: 0s; /* 우상단 */
     }
     .shape.circle-1 {
       width: 90px; height: 90px; background: var(--shape-color-2); border-radius: 50%;
-      top: 60%; left: 85%; transform: rotate(-30deg); animation-delay: 2s;
+      top: 70%; left: 10%; transform: rotate(-30deg); animation-delay: 2s; /* 좌하단 */
     }
     .shape.triangle-up-1 {
       width: 0; height: 0; border-left: 70px solid transparent; border-right: 70px solid transparent; border-bottom: 120px solid var(--shape-color-3);
-      top: 20%; left: 75%; transform: rotate(45deg); animation-delay: 4s;
+      top: 40%; left: 5%; transform: rotate(45deg); animation-delay: 4s; /* 좌측 중앙 */
     }
     .shape.rhombus-1 {
       width: 120px; height: 120px; background: var(--shape-color-4); transform: rotate(45deg);
-      top: 45%; left: 15%; animation-delay: 6s;
+      top: 10%; left: 30%; animation-delay: 6s; /* 상단 중앙 좌측 */
     }
     .shape.oval-1 {
       width: 100px; height: 150px; background: var(--shape-color-5); border-radius: 50%;
-      top: 5%; left: 50%; transform: rotate(70deg); animation-delay: 8s;
+      top: 55%; left: 50%; transform: rotate(70deg); animation-delay: 8s; /* 중앙 하단 */
     }
     .shape.triangle-down-1 {
       width: 0; height: 0; border-left: 80px solid transparent; border-right: 80px solid transparent; border-top: 130px solid var(--shape-color-6);
-      top: 70%; left: 40%; transform: rotate(-20deg); animation-delay: 10s;
+      top: 25%; left: 60%; transform: rotate(-20deg); animation-delay: 10s; /* 우측 중앙 */
     }
     .shape.square-1 {
       width: 110px; height: 110px; background: var(--shape-color-7);
-      top: 30%; left: 30%; transform: rotate(0deg); animation-delay: 12s;
+      top: 80%; left: 75%; transform: rotate(0deg); animation-delay: 12s; /* 우하단 */
     }
     .shape.rect-2 {
       width: 160px; height: 60px; background: var(--shape-color-8);
-      top: 80%; left: 5%; transform: rotate(-10deg); animation-delay: 14s;
+      top: 5%; left: 5%; transform: rotate(-10deg); animation-delay: 14s; /* 좌상단 */
     }
     .shape.circle-2 {
       width: 70px; height: 70px; background: var(--shape-color-9); border-radius: 50%;
-      top: 15%; left: 85%; animation-delay: 16s;
+      top: 35%; left: 90%; animation-delay: 16s; /* 우측 */
     }
     .shape.oval-2 {
       width: 130px; height: 80px; background: var(--shape-color-10); border-radius: 50%;
-      top: 50%; left: 70%; transform: rotate(25deg); animation-delay: 18s;
+      top: 75%; left: 30%; transform: rotate(25deg); animation-delay: 18s; /* 하단 중앙 좌측 */
     }
     .shape.rhombus-2 {
       width: 90px; height: 90px; background: var(--shape-color-11); transform: rotate(10deg);
-      top: 85%; left: 60%; animation-delay: 20s;
+      top: 20%; left: 40%; animation-delay: 20s; /* 상단 중앙 */
     }
     .shape.triangle-up-2 {
       width: 0; height: 0; border-left: 50px solid transparent; border-right: 50px solid transparent; border-bottom: 90px solid var(--shape-color-12);
-      top: 5%; left: 25%; transform: rotate(90deg); animation-delay: 22s;
+      top: 90%; left: 55%; transform: rotate(90deg); animation-delay: 22s; /* 하단 중앙 우측 */
     }
 
 
