--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       -webkit-backdrop-filter: blur(10px); /* Safari 지원 */
       padding: 3rem;
       border-radius: 2rem; /* 훨씬 더 둥근 모서리 */
-      max-width: 480px;
+      max-width: 550px;
       width: 90%;
       box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15); /* 부드러운 그림자 */
       display: flex;
@@ -315,6 +315,8 @@
   <div class="main-container">
     <!-- 대기 메시지 텍스트입니다. -->
     <div class="message-text">
+      본 설문은<br>
+      청연초 전입학 조사입니다.<br>
       잠시만 기다려 주세요.
     </div>
     <!-- 로딩 스피너입니다. -->
@@ -328,12 +330,7 @@
       "https://confirmationofprospectiveschooltransfer2.streamlit.app",
       "https://confirmationofprospectiveschooltransfer3.streamlit.app",
       "https://confirmationofprospectiveschooltransfer4.streamlit.app",
-      "https://confirmationofprospectiveschooltransfer5.streamlit.app",
-      "https://confirmationofprospectiveschooltransfer6.streamlit.app",
-      "https://confirmationofprospectiveschooltransfer7.streamlit.app",
-      "https://confirmationofprospectiveschooltransfer8.streamlit.app",
-      "https://confirmationofprospectiveschooltransfer9.streamlit.app",
-      "https://confirmationofprospectiveschooltransfer10.streamlit.app"
+      "https://confirmationofprospectiveschooltransfer5.streamlit.app"
     ];
 
     // DOMContentLoaded 이벤트가 발생하면 실행될 함수입니다.
